--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,38 @@
 
 <body>
     <h1> Comming Soon..</h1>
+
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ul>
+
+    <p>
+        <i>This</i> <em>is</em> <b>SSAFY</b> <strong>1st</strong>
+    </p>
+
+    <blockquote>
+        Real Artist Ship
+    </blockquote>
+
+
+
+
+    <img src="./animals/cat1.jpg" alt="cat" width="250px" />
+    <a href="https://www.ssafy.com/">버튼</a>
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="GOOGLE">
+    <img src="./animals/dog1.jpg" alt="dog" />
+
+    <!-- <header></header>
+    <nav></nav>
+    <aside></aside>
+    <section>
+        <article></article>
+        <article></article>
+    </section>
+    <footer></footer> -->
+
+
 </body>
 
 </html>
